<<<<<<< Updated upstream
[gd_scene load_steps=5 format=2]
=======
[gd_scene load_steps=10 format=2]
>>>>>>> Stashed changes

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/SlimeDrip-m2GJv.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 1, 0.607843, 1 )

[sub_resource type="DynamicFont" id=2]
<<<<<<< Updated upstream
size = 65
outline_size = 6
=======
size = 30
outline_size = 4
>>>>>>> Stashed changes
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 14
font_data = ExtResource( 2 )

<<<<<<< Updated upstream
=======
[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

>>>>>>> Stashed changes
[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
<<<<<<< Updated upstream
margin_right = 1024.0
margin_bottom = 602.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 362.0
margin_top = 200.0
margin_right = 662.0
margin_bottom = 576.0

[node name="new2" type="Button" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 72.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0352941, 0.627451, 0, 1 )
custom_fonts/font = SubResource( 2 )
=======
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -195.0
margin_right = 96.0
margin_bottom = -24.0
custom_constants/separation = 8

[node name="new2" type="Button" parent="VBoxContainer"]
margin_right = 191.0
margin_bottom = 31.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0352941, 0.627451, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
>>>>>>> Stashed changes
text = "new"
flat = true

[node name="load2" type="Button" parent="VBoxContainer"]
<<<<<<< Updated upstream
margin_top = 76.0
margin_right = 300.0
margin_bottom = 148.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.545098, 0, 1 )
custom_fonts/font = SubResource( 2 )
=======
margin_top = 39.0
margin_right = 191.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.545098, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
>>>>>>> Stashed changes
text = "load"
flat = true

[node name="options2" type="Button" parent="VBoxContainer"]
<<<<<<< Updated upstream
margin_top = 152.0
margin_right = 300.0
margin_bottom = 224.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.992157, 0, 1 )
custom_fonts/font = SubResource( 2 )
=======
margin_top = 78.0
margin_right = 191.0
margin_bottom = 109.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.992157, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
>>>>>>> Stashed changes
text = "options"
flat = true

[node name="credits2" type="Button" parent="VBoxContainer"]
<<<<<<< Updated upstream
margin_top = 228.0
margin_right = 300.0
margin_bottom = 300.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.054902, 1, 1 )
custom_fonts/font = SubResource( 2 )
=======
margin_top = 117.0
margin_right = 191.0
margin_bottom = 148.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.054902, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
>>>>>>> Stashed changes
text = "credits"
flat = true

[node name="exit2" type="Button" parent="VBoxContainer"]
<<<<<<< Updated upstream
margin_top = 304.0
margin_right = 300.0
margin_bottom = 376.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 0.211765, 0.211765, 1 )
custom_fonts/font = SubResource( 2 )
=======
margin_top = 156.0
margin_right = 191.0
margin_bottom = 187.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 0.211765, 0.211765, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
>>>>>>> Stashed changes
text = "exit"
flat = true

[connection signal="pressed" from="VBoxContainer/new2" to="." method="_on_new2_pressed"]
[connection signal="pressed" from="VBoxContainer/load2" to="." method="_on_load2_pressed"]
[connection signal="pressed" from="VBoxContainer/options2" to="." method="_on_options2_pressed"]
[connection signal="pressed" from="VBoxContainer/credits2" to="." method="_on_credits2_pressed"]
[connection signal="pressed" from="VBoxContainer/exit2" to="." method="_on_exit2_pressed"]
